check user status
check the user current status so can get all companies list
